using jigsaw component

--- a/demo/src/styles.scss
+++ b/demo/src/styles.scss
@@ -61,3 +61,6 @@ pre {
 // ag-grid
 @import '~ag-grid-community/dist/styles/ag-grid.css';
 @import '~ag-grid-community/dist/styles/ag-theme-balham.css';
+
+@import '~@rdkmaster/jigsaw/prebuilt-themes/zte.css';
+@import '~@rdkmaster/jigsaw/theming-api';
